--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -20,6 +20,16 @@ body {
     margin: 0 auto;
     border-radius: 14px;
     margin-bottom: 120px;
+    @media all and (max-width: 1280px) {
+        margin-bottom: 100px;
+    }
+    @media all and (max-width: 980px) {
+        margin-bottom: 50px;
+    }
+    @media all and (max-width: 480px) {
+        margin-bottom: 0;
+    }
+    
 }
 .wrapper {
     max-width: 1320px;
